# legal-doc-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
examples/: sample_contract.txt
prompts/: __init__.py  analysis_prompts.py
src/legal_doc_analyzer/: __init__.py  analyzer.py  classifier.py  cli.py  comparator.py  extractors.py  models.py  ner.py  parsers.py  preprocessing.py  summarizer.py
tests/: conftest.py  test_classifier.py  test_comparator.py  test_edge_cases.py  test_extractors.py  test_models.py  test_ner.py  test_preprocessing.py  test_summarizer.py
utils/: __init__.py  document_processor.py  llm_analyzer.py
